Fixes #1
This fixes the ad overlapping footer issue on video pages closing #1

--- a/css/main.css
+++ b/css/main.css
@@ -474,7 +474,7 @@ a:hover{
 }
 .videoy{
     margin-top: 0px;
-    margin-bottom: -450px;
+    margin-bottom: -350px;
 }
 .videoy h2{
     text-align: left
